tests/integration_tests/snapshots/integration__integration_tests__git_error_display__detached_head_no_action.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mNot on a branch (detached HEAD)[39m
[2m↳[22m [2mTo switch to a branch, run [4mgit switch <branch>[24m[22m
