tests/integration_tests/snapshots/integration__integration_tests__git_error_display__hook_command_failed_with_name.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mpre-merge command failed: [1mtest[22m: exit code 1[39m
