tests/integration_tests/snapshots/integration__integration_tests__git_error_display__hook_command_failed_with_skip_hint.snap
---
source: tests/integration_tests/git_error_display.rs
expression: "err_with_hint.downcast_ref::<HookErrorWithHint>().expect(\"wrapped to HookErrorWithHint\").render()"
---
[31m✗[39m [31mpre-merge command failed: [1mtest[22m: exit code 1[39m
[2m↳[22m [2mTo skip pre-merge hooks, re-run with [4m--no-hooks[24m[22m
