tests/integration_tests/snapshots/integration__integration_tests__git_error_display__hook_command_failed_without_name.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mpre-start command failed: command not found[39m
