tests/integration_tests/snapshots/integration__integration_tests__git_error_display__invalid_reference.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.to_string()
---
❌ [31mBranch [1mnonexistent-branch[22m not found[39m

💡 [2mTo create a new branch, run [90mwt switch nonexistent-branch --create[39m; to list branches, run [90mwt list --branches --remotes[39m[22m
