tests/integration_tests/snapshots/integration__integration_tests__git_error_display__llm_command_failed.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mCommit generation command failed[39m
[107m [0m Error: API key not found
[2m○[22m Ran command:
[107m [0m llm --model claude
