tests/integration_tests/snapshots/integration__integration_tests__git_error_display__multiline_error_formatting.snap
---
source: tests/integration_tests/git_error_display.rs
expression: rendered
---
[31m✗[39m [31mCommand failed[39m
[107m [0m fatal: Unable to read current working directory
[107m [0m error: Could not determine cwd
